--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,19 @@
 
   <groupId>uk.ac.ucl</groupId>
 
-  <artifactId>PatientWebApp</artifactId>
+  <artifactId>WebApp</artifactId>
 
   <version>1.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
 
-  <name>PatientWebApp</name>
+  <name>WebApp</name>
 
   <url>http://localhost:8080</url>
 
   <properties>
-    <tomcat.version>9.0.31</tomcat.version>
+    <tomcat.version>9.0.45</tomcat.version>
+    <jsp.version>4.0.1</jsp.version>
     <main.class>uk.ac.ucl.main.Main</main.class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -30,7 +31,7 @@
         <version>3.2.3</version>
         <configuration>
           <outputDirectory>${basedir}/war-file/</outputDirectory>
-          <warName>PatientWebApp-1.0-SNAPSHOT</warName>
+          <warName>WebApp-1.0-SNAPSHOT</warName>
         </configuration>
       </plugin>
 
@@ -97,7 +98,7 @@
           <executable>java</executable>
           <arguments>
             <argument>-classpath</argument>
-            <classpath/>
+            <classpath />
             <argument>uk.ac.ucl.main.Main</argument>
           </arguments>
           <workingDirectory>${project}</workingDirectory>
@@ -120,38 +121,13 @@
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-jasper</artifactId>
-      <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-jasper-el</artifactId>
-      <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-jsp-api</artifactId>
       <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-websocket</artifactId>
-      <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.200</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20190722</version>
     </dependency>
   </dependencies>
 </project>
