--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <tomcat.version>9.0.45</tomcat.version>
     <jsp.version>4.0.1</jsp.version>
+    <java.version>15</java.version>
     <main.class>uk.ac.ucl.main.Main</main.class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -50,7 +51,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>13</release>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
       <plugin>
@@ -99,7 +100,7 @@
           <arguments>
             <argument>-classpath</argument>
             <classpath />
-            <argument>uk.ac.ucl.main.Main</argument>
+            <argument>${main.class}</argument>
           </arguments>
           <workingDirectory>${project}</workingDirectory>
         </configuration>
