--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <artifactId>WebApp</artifactId>
 
-  <version>1.1-SNAPSHOT</version>
+  <version>1.2</version>
 
   <packaging>war</packaging>
 
@@ -21,7 +21,7 @@
     <java.version>23</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <main.class>ucl.ac.uk.main.Main</main.class>
+    <main.class>uk.ac.ucl.main.Main</main.class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
