--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
 
-  <display-name>MoonShot</display-name>
+  <display-name>WebNote</display-name>
   <description>
-    MoonShot on the Web
+    A note editor and manager on the browser.
   </description>
 
 </web-app>
